<resources>
    <string name="app_name">Hakon\'s Reader</string>
    <string name="integer" translatable="false">%,d</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loggedIn">Logged in</string>
    <string name="navbarHome">Home</string>
    <string name="navbarSubreddit">Subreddit</string>
    <string name="navbarProfile">Profile</string>
    <string name="navbarSettings">Settings</string>
    <string name="logInDescription">When you press the button below to log in you will be redireceted to Reddit.com.\n\nYou will be shown a list of permissions this application needs, and if you authorize the application you will be redirected back. If you want to remove the applications access to your account, go to: <a href="https://www.reddit.com/prefs/apps">https://www.reddit.com/prefs/apps</a>. The list of permissions can also be seen from your profile page after logging in.\n\nYour password never leaves Reddit.com; this application will never know or store your password.</string>
    <string name="btnLogIn">Log in</string>
    <string name="logOut">Log out</string>
    <string name="applicationAccessRevokedHeader">Application access revoked</string>
    <string name="applicationAccessRevokedContent">The applications access to your account has been revoked.\n\nYou will have to log in again.</string>
    <string name="btnSubscribeSubscribe">+ Subscribe</string>
    <string name="btnSubscrubeUnsubscribe">- Unsubscribe</string>
    <plurals name="amountOfSubscribers">
        <item quantity="one">%d subscriber</item>
        <item quantity="other">%,d subscribers</item>
    </plurals>
    <string name="numCommentsThousands">%.1fK comments</string>
    <plurals name="numComments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <string name="scoreHidden" translatable="false">•</string>
    <string name="scoreThousands">%.1fK</string>
    <string name="scoreWithText">%d points</string>
    <string name="scoreHiddenText">Score hidden</string>
    <string name="subreddit_prefixed" translatable="false">r/%s</string>
    <string name="author_prefixed" translatable="false">u/%s</string>
    <string name="comment_by_poster" translatable="false">u/%s (OP)</string>
    <string name="profileAge">User since %s</string>
    <string name="karmaHeader">Karma</string>
    <string name="commentKarma">%d comment karma</string>
    <string name="postKarma">%d post karma</string>
    <string name="linkCopied">Link copied to clipboard</string>
    <plurals name="extraComments">
        <item quantity="one">%d more comment</item>
        <item quantity="other">%d more comments</item>
    </plurals>
    <string name="prefs_group_appearance">Appearance</string>
    <string name="prefs_group_misc">Misc</string>
    <string name="prefs_group_posts">Posts</string>
    <string name="prefs_group_videos">Videos</string>
    <string name="prefs_group_comments">Comments</string>
    <string name="prefs_group_links">Links</string>
    <string name="prefs_group_inbox">Inbox</string>
    <string name="prefs_group_subreddits">Subreddits</string>
    <string name="prefs_group_awards">Awards</string>
    <string name="prefs_group_third_party">Third party</string>
    <string name="prefs_group_dev_options">Developer options</string>
    <string name="prefs_title_theme">Dark mode</string>
    <string name="prefs_title_cache_nsfw">Cache NSFW videos and images</string>
    <string name="prefs_title_auto_play_videos">Automatically play videos</string>
    <string name="prefs_title_auto_play_nsfw_videos">Automatically play NSFW videos</string>
    <string name="prefs_title_play_muted_videos">Start videos muted</string>
    <string name="prefs_title_play_muted_videos_fullscreen">Start videos muted in fullscreen</string>
    <string name="prefs_title_loop_videos">Loop videos</string>
    <string name="prefs_title_fullscreen_swipe_direction">Direction to swipe away fullscreen items</string>
    <string name="prefs_title_fullscreen_swipe_direction_up">Up</string>
    <string name="prefs_title_fullscreen_swipe_direction_down">Down</string>
    <string name="prefs_title_fullscreen_swipe_direction_left">Left</string>
    <string name="prefs_title_fullscreen_swipe_direction_right">Right</string>
    <string name="prefs_title_language">Language</string>
    <string name="prefs_title_language_en" translatable="false">English</string>
    <string name="prefs_title_language_nb" translatable="false">Norsk (bokmål)</string>
    <string name="prefs_title_hide_comments_threshold">Score threshold to hide comments</string>
    <string name="prefs_title_max_post_size_percentage">Max screen height</string>
    <string name="prefs_summary_max_post_size_percentage">The percentage of the screen height that posts will take when opened</string>
    <string name="prefs_title_max_post_size_percentage_when_collapsed">Max screen height, without collapse</string>
    <string name="prefs_summary_max_post_size_percentage_when_collapsed">The percentage of the screen height that posts will take when opened, when post collapse is disabled</string>
    <string name="prefs_title_opening_links_in_app">Open links in internal browser</string>
    <string name="prefs_title_data_saving">Data saving</string>
    <string name="prefs_title_data_saving_mobile_only">Only on mobile data</string>
    <string name="prefs_title_data_saving_always">Always</string>
    <string name="prefs_title_data_saving_never">Never</string>
    <string name="prefs_title_show_nsfw_preview">Show NSFW</string>
    <string name="prefs_title_show_nsfw_preview_normal">Normal</string>
    <string name="prefs_title_show_nsfw_preview_blur">Blurred</string>
    <string name="prefs_title_show_nsfw_preview_no_image">No image</string>
    <string name="prefs_title_highlight_new_comments">Highlight new comments</string>
    <string name="prefs_title_comment_smooth_scroll_threshold">Threshold for smooth scrolling</string>
    <string name="prefs_title_filter_posts_from_default_subreddits">Filter posts</string>
    <string name="prefs_dialog_message_filter_posts_from_default_subreddits">Filter posts from subreddits from appearing in front page, popular, and all. One subreddit per line</string>
    <string name="prefs_title_show_all_sidebars">Show all sidebars (or just one)</string>
    <string name="prefs_title_link_scale">Link text scale</string>
    <string name="prefs_title_inbox_show_badge">Show badge in navbar</string>
    <string name="prefs_title_inbox_show_notifications">Show notifications</string>
    <string name="prefs_title_inbox_update_frequency">Update frequency</string>
    <string name="prefs_title_inbox_update_frequency_dont_update">Don\'t update automatically</string>
    <string name="prefs_title_inbox_update_frequency_15_min">15 minutes</string>
    <string name="prefs_title_inbox_update_frequency_30_min">30 minutes</string>
    <string name="prefs_title_inbox_update_frequency_60_min">60 minutes</string>
    <string name="prefs_title_comment_show_link_preview">Show link previews in comments</string>
    <string name="prefs_title_comment_link_preview_show_entire_link">Show entire link in link previews</string>
    <string name="prefs_summary_comment_link_preview_show_entire_link">With this disabled only one line will be shown</string>
    <string name="prefs_title_comment_link_preview_show_identical_links">Show preview for links with identical text</string>
    <string name="prefs_title_post_collapse_by_default">Collapse posts</string>
    <string name="prefs_summary_post_collapse_by_default">This can be toggled for each post by long pressing the collapse button</string>
    <string name="prefs_title_play_youtube_videos_in_app">Open YouTube videos in app</string>
    <string name="prefs_key_theme" translatable="false">theme</string>
    <string name="prefs_key_cache_nsfw" translatable="false">cache_nsfw</string>
    <string name="prefs_key_play_muted_videos" translatable="false">play_muted_videos</string>
    <string name="prefs_key_play_muted_videos_fullscreen" translatable="false">play_muted_videos_fullscreen</string>
    <string name="prefs_key_loop_videos" translatable="false">loop_videos</string>
    <string name="prefs_key_fullscreen_swipe_direction" translatable="false">fullscreen_swipe_direction</string>
    <string name="prefs_key_language" translatable="false">language</string>
    <string name="content_description_post_bar_comments">Open post</string>
    <string name="content_description_post_menu">Post menu</string>
    <string name="content_description_load_hd_image">Load HD image</string>
    <string name="transition_post_bar_comments_img" translatable="false">transition_post_bar_comments_img</string>
    <string name="transition_post_bar_num_comments" translatable="false">transition_post_bar_num_comments</string>
    <string name="transition_post_bar_post_menu" translatable="false">transition_post_bar_post_menu</string>
    <string name="transition_post_bar_vote_bar" translatable="false">transition_post_bar_vote_bar</string>
    <string name="transition_content_image_image" translatable="false">transition_content_image_image</string>
    <string name="transition_content_image_hd_icon" translatable="false">transition_content_image_hd_icon</string>
    <string name="front_page">Front page</string>
    <string name="popular" translatable="false">Popular</string>
    <string name="all" translatable="false">All</string>
    <string name="replyHint">Say something nice</string>
    <string name="replyConfirmBackPressDialogHeader">You have unsent text</string>
    <string name="replyConfirmBackPressDialogContent">There is currently text in the input field. Are you sure you want to discard it?</string>
    <string name="markdownBtnBold" translatable="false"><b>B</b></string>
    <string name="markdownBtnItalic" translatable="false"><i>I</i></string>
    <string name="markdownBtnStrikethrough" translatable="false"><strike>S</strike></string>
    <string name="markdownSuperscript" translatable="false">A<sup>B</sup></string>
    <string name="markdownSpoiler" translatable="false">\?</string>
    <string name="markdownInlineCode" translatable="false">&lt;/&gt;</string>
    <string name="markdownCodeBlock" translatable="false">if</string>
    <string name="content_description_markdown_btn_bold">Bold text</string>
    <string name="content_description_markdown_btn_italic">Italic text</string>
    <string name="content_description_markdown_btn_strikethrough">Strikethrough text</string>
    <string name="content_description_markdown_btn_link">Add a hyperlink</string>
    <string name="content_description_markdown_btn_quote">Add a quote</string>
    <string name="content_description_markdown_btn_spoiler">Add a spoiler</string>
    <string name="content_description_markdown_btn_superscript">Superscript text</string>
    <string name="content_description_markdown_btn_inline_code">Add code snippet</string>
    <string name="content_description_markdown_btn_code_block">Add code block</string>
    <string name="content_description_markdown_btn_bullet_list">Bullet list</string>
    <string name="content_description_markdown_btn_numbered_list">Numbered list</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="dialogReplyPrivatelyBrowsingInTitle">You\'re browsing privately</string>
    <string name="dialogReplyPrivatelyBrowsingInContent">You are currently browsing privately and cannot send a reply unless this is disabled</string>
    <string name="copyPostLink">Copy post link</string>
    <string name="copyPostContentLink">Copy link to post content</string>
    <string name="postMenuAddSubredditToFilter">Filter posts from \'%s\'</string>
    <string name="postMenuViewOnRemoveddit">View on removeddit.com</string>
    <string name="disable">Disable</string>
</resources>