<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuCopyPostLink"
        android:icon="@drawable/ic_baseline_link_24"
        android:title="@string/copyPostLink" />

    <item
        android:id="@+id/menuCopyPostContent"
        android:icon="@drawable/ic_content_copy_24"
        android:title="@string/copyPostContentLink" />

    <item
        android:id="@+id/menuViewOnRemoveddit"
        android:icon="@drawable/ic_visibility_off_24px"
        android:title="@string/postMenuViewOnRemoveddit" />

    <item
        android:id="@+id/menuPostAddSubredditToFilter"
        android:icon="@drawable/ic_filter_24px"
        android:title="@string/postMenuAddSubredditToFilter" />
</menu>