<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.hakonsreader.recyclerviewadapters.menuhandlers.PostsMenuHandlerKt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/postsParentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/background"
        android:foreground="@drawable/ripple_main_bg"
        android:paddingBottom="4dp">

        <com.example.hakonsreader.views.PostInfo
            android:id="@+id/postInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/postMargin"
            android:paddingEnd="@dimen/postMargin"

            android:transitionName="@string/transition_post_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Content of the post (image, video etc.) -->
        <FrameLayout
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postInfo"
            tools:background="#0FF"
            tools:layout_height="150dp" />

        <ImageView
            android:id="@+id/postCommentsImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/postMargin"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/content_description_post_bar_comments"

            android:transitionName="@string/transition_post_bar_comments_img"
            android:scaleX="-1"
            android:src="@drawable/ic_message_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/content" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/numComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"

            android:textColor="@color/text_color"
            android:transitionName="@string/transition_post_bar_num_comments"

            app:layout_constraintBottom_toBottomOf="@+id/postCommentsImg"
            app:layout_constraintStart_toEndOf="@+id/postCommentsImg"
            app:layout_constraintTop_toTopOf="@+id/postCommentsImg"

            tools:text="123 comments" />

        <ImageButton
            android:id="@+id/postPopupMenu"
            android:layout_width="50dp"
            android:layout_height="24dp"

            android:background="@null"
            android:contentDescription="@string/content_description_post_menu"

            android:transitionName="@string/transition_post_bar_post_menu"

            android:foreground="@drawable/ripple_main_bg"

            android:src="@drawable/ic_baseline_more_horiz_24"
            app:layout_constraintBottom_toBottomOf="@+id/postCommentsImg"
            app:layout_constraintEnd_toStartOf="@+id/voteBar"
            app:layout_constraintTop_toTopOf="@+id/postCommentsImg"
            app:layout_constraintVertical_bias="0.0" />

        <com.example.hakonsreader.views.VoteBar
            android:id="@+id/voteBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/postMargin"

            android:transitionName="@string/transition_post_bar_vote_bar"
            app:layout_constraintBottom_toBottomOf="@+id/postPopupMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/postPopupMenu" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>